# SFML-3.0.1-Template

./: CMakeLists.txt  README.md  SFML-LICENSE.md
mac/: Info.plist
resources/: resources.rc
src/: Game.cpp  Game.h  main.cpp
